--- a/views/forms/order_detail.pug
+++ b/views/forms/order_detail.pug
@@ -44,3 +44,8 @@
   #tbTable-orders-items.fullView
 
 .two-Buttons.orderActions
+  #box-error-select-item.error.error-detail
+    p(style="display:none") Por favor seleccione un producto para poder continuar
+  .two-buttons-container
+    a#cambio-tg.btnPrimary Cambio
+    a#devolucion-tg.btnPrimary Devolucion
