--- a/views/forms/order_detail.pug
+++ b/views/forms/order_detail.pug
@@ -23,7 +23,16 @@
     p#country_dev
     p#phone_dev
     p#email_dev
-.ped-detail-devolucion
+    input#full-name-send-cam-f(type="hidden", name="full-name-send-cam-f" value="")
+    input#address-send-cam-f(type="hidden", name="address-send-cam-f" value="")
+    input#comuna-send-cam-f(type="hidden", name="comuna-send-cam-f" value="")
+    input#region-send-cam-f(type="hidden", name="region-send-cam-f" value="")
+    input#country-cam-f(type="hidden", name="country-cam-f" value="")
+    input#phone-cam-f(type="hidden", name="phone-cam-f" value="")
+    input#email-cam-f(type="hidden", name="email-cam-f" value="")
+    input#amount-cam-f(type="hidden", name="amount-cam-f" value="")
+    input#rut-cam-f(type="hidden", name="rut-cam-f" value="")
+.listTable.ped-detail-change#table-list-change-det
   .ped-detail-sec-title
     .header-title
       h3 Detalle del
