--- a/views/forms/change_prod.pug
+++ b/views/forms/change_prod.pug
@@ -70,7 +70,7 @@
         label(for="email_user") Correo:
         input#email_user(type="text", name="email_user")
       .form-group
-        label(for="phone_user") Courier
+        label(for="courier_cam") Courier
         select#courier_cam(name="courier_cam")
           option(value="1") Correos Chile
           option(value="2") Chile Express 
